update sha 1 type problem
Signed-off-by: Ashhhhhhhhhhhhhhhh <ashweensekar@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Delivery Management/nbproject/private/
 /Delivery Management/build/
+/JavaApplication5/nbproject/private/
+/Book/nbproject/private/
