--- a/OODJ/nbproject/project.properties
+++ b/OODJ/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=OODJ
+application.vendor=CCK
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,15 +31,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/OODJ.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.itextpdf-5.1.0.jar=C:\\Users\\CCK\\Downloads\\itextpdf-5.1.0.jar\\itextpdf-5.1.0.jar
-file.reference.itextpdf-5.1.0.jar-1=D:\\SEM 1\\OODJ\\itextpdf-5.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.itextpdf-5.1.0.jar}:\
-    ${file.reference.itextpdf-5.1.0.jar-1}
+    ${file.reference.itextpdf-5.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,6 +59,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -67,6 +68,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=OODJ
 main.class=Main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
