--- a/OODJ/nbproject/project.properties
+++ b/OODJ/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.itextpdf-5.1.0.jar=C:\\Users\\CCK\\Downloads\\itextpdf-5.1.0.jar\\itextpdf-5.1.0.jar
+file.reference.itextpdf-5.1.0.jar-1=..\\..\\itextpdf-5.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.itextpdf-5.1.0.jar}
+    ${file.reference.itextpdf-5.1.0.jar}:\
+    ${file.reference.itextpdf-5.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
